Build admin-lte theme layout set the resources and js output files

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@
 /public/storage
 /public/css
 /public/js
+/public/fonts
 /public/.htaccess
+/public/mix-manifest.json
 /storage/*.key
 /vendor
 .env
