--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
+        "eslint": "^5.14.0",
+        "eslint-config-standard": "^12.0.0",
+        "eslint-plugin-import": "^2.16.0",
+        "eslint-plugin-node": "^8.0.1",
+        "eslint-plugin-promise": "^4.0.1",
+        "eslint-plugin-standard": "^4.0.0",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
@@ -22,9 +28,12 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.6"
+        "vue-template-compiler": "^2.6.6",
+        "webpack-livereload-plugin": "^1.2.0"
     },
     "dependencies": {
-        "admin-lte": "^2.4.8"
+        "admin-lte": "^2.4.8",
+        "vue-router": "^3.0.2",
+        "vuex": "^3.1.0"
     }
 }
